# rust-promql-parser-js

./: Cargo.toml  README.md  build.sh  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
js/: index.js  index.test.js
js/__snapshots__/: index.test.js.snap
src/: lib.rs  syn_expr_json.rs
